--- a/trunk/ansys-mode_tutorial.org
+++ b/trunk/ansys-mode_tutorial.org
@@ -36,22 +36,24 @@
    Some features are quite sophisticated but its documentation is
    targeted for ANSYS users with little Emacs experience.
 #+LaTeX: \\[.2cm]
-   [[http://www.gnu.org/home.en.html][GNU]] Emacs is an up-to-date, powerful, yet free editor which is
-   available for any operating system where ANSYS is running.
+   [[http://www.gnu.org/home.en.html][GNU]] Emacs (Gnu is Not Unix) is an up-to-date, powerful, yet free
+   editor which is available for any operating system where ANSYS is
+   running.
 
 #+LaTeX: \\[.5cm]
    In the following *C-c* or *M-c* means typing the *CTRL* or *ALT*
    key together with the *c* key.
   
 * Download
-** Download ANSYS-Mode together with the free Emacs editor \\ There are no license restrictions also for commercial use
+** Download ANSYS-Mode together with the Emacs editor \\ There are no costs and license restrictions also for commercial use
   Download the pre-configured ANSYS-Mode in conjunction with the
-  latest Emacs editor binary (Win32/64) from the Google Code [[http://code.google.com/p/ansys-mode/downloads/list][download page]].
+  latest Emacs editor binary for Windows 32/64 bit from the Google
+  Code [[http://code.google.com/p/ansys-mode/downloads/list][download page]].
   
   [[./download.png]]
   
 * Installation
-** Install ANSYS-Mode together with the Emacs editor
+** Install ANSYS-Mode together with Emacs
   Extract the former zip archive to an arbitrary location on your file
   system.  Optionally you might install Emacs shortcut icons for the
   system tray with /addpm.exe/ in Emacs' /bin/ folder.
@@ -71,9 +73,10 @@
   [[./find_file_dialog.png]]
 
 ** Explore the ANSYS-Mode menu
-  Most things, like opening the ANSYS help browser, from the menu (or
-  typing *C-c C-h*) should work out of the box if ANSYS is installed
-  in its default folder /C:Program Files/ under XP64.
+  Everything should work if ANSYS is installed in its default folder
+  /C:Program Files/ under Win64, otherwise you must configure system
+  dependent stuff, like opening the ANSYS help browser from the ANSYS-Mode
+  menu (or typing its keyboard shortcut *C-c C-h*).
 
 #+ATTR_LaTeX: height=7.5cm
   [[./ansys_menu.png]]
@@ -138,40 +141,39 @@
 
 * Documentation and licensing
 
-** Check out Emacs editor features and tutorial
-  Newcomers to Emacs should take the fine [[http://www.gnu.org/software/emacs/tour/][online tour]] for an overview
-  of its features and start the interactive tutorial which is translated to
-  various languages (see below).
+** Get to know Emacs and check out its tutorial
+  Newcomers to Emacs should take the guided [[http://www.gnu.org/software/emacs/tour/][online tour]] to get a
+  background of its capabilities and start the interactive tutorial (*C-h t*)
+  which is translated to various languages.
 
 #+ATTR_LaTeX: height=7.5cm
   [[./emacs_tutorial.png]]
 
 ** Use the ANSYS-Mode built-in documentation
-   Please type *C-h m* for the ANSYS-Mode help. Included is also a brief
-   introduction to the Emacs editor.
+   Please type *C-h m* for the ANSYS-Mode help, especially for the
+   usage and keybindings of this mode. The help tries also to give a
+   brief introduction in the usage of the editor.
 
 #+ATTR_LaTeX: height=7.5cm
    [[./mode_help.png]]
 
 ** Read further ANSYS-Mode documentation
 
-*** Licensing:
-    There are effectively no restrictions for you using Emacs and
-    ANSYS-Mode commerically.  Both are under the [[http://www.gnu.org/licenses/gpl-3.0.en.html][GPL]] (GNU Puplic
-    License), see also the /LICENSE/ file.
-
-*** Installation and configuration:
-    For detailed instructions - especially useful for Unix and Win32
-    systems - please have a look in the accompanying /README/
-    file. For an online help see the [[http://www.emacswiki.org/emacs/AnsysMode][ANSYS-Mode wiki]].
+*** Installation:
+    For detailed instructions - necessary if you are not using the
+    pre-configured mode - please have a look in the /README/ file,
+    which is included in the mode's archive. For an online version of
+    it see the [[http://www.emacswiki.org/emacs/AnsysMode][ANSYS-Mode page]] at the EmacsWiki.
     
-*** Usage and keyboard short-cuts:
-   Please see the mode's built-in documentation from the ANSYS menu or
-   type *C-h m*.
-
 *** News and project history:
-    This is placed in the mode's accompanying /NEWS/ file
+    They are placed in the mode's accompanying /NEWS/ file
 
+*** Licensing and costs:
+    This is free software, there are no costs and effectively no
+    restrictions for you using Emacs and ANSYS-Mode also commerically.
+    Both are under the [[http://www.gnu.org/licenses/gpl-3.0.en.html][GPL]] (GNU Puplic License), see also the
+    /LICENSE/ file.
+    
 * Configuration
 
 ** Configure ANSYS-Mode
